--- a/MemberManagement/templates/static/imprint.html
+++ b/MemberManagement/templates/static/imprint.html
@@ -17,11 +17,10 @@
   Jacobs University Bremen Alumni Association e.V. ist ein gemeinnütizger Verein.
 </p>
 <p>
-  President: Anne Valtink<br/>
-  Vize-President: Stefan Rustler<br/>
-  Schatzmeister: Stefan Kuzmanovski<br/>
-  Schriftführer: Razvan Barabaş<br/>
-  Beisitzer: Elena Isac, Max Lohmann, Lida-Maria Lottko, Anna-Lena Schindl, Tom Wiesing<br/>
+  President: Stefan Rustler<br/>
+  Vize-President: Stefan Kuzmanovski<br/>
+  Schriftführer:  Muhammad Azka<br/>
+  Beisitzer: Albena Bogoeva, Cristina Trifon-Calvopiña, Franziska Pohle, Mohsin Dar, Sharon Min, Tom Wiesing<br/>
 </p>
 <p>
   Handelsregister<br/>
