--- a/atlas/templates/atlas/profile.html
+++ b/atlas/templates/atlas/profile.html
@@ -1,19 +1,20 @@
 {% extends "base/base.html" %}
 
 {% load registry_display %}
+{% load static %}
 
 {% block title %}Member{% endblock %}
 
 
 {% block head %}
-<link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/css/ol.css" type="text/css">
+<link rel="stylesheet" href="{% static 'openlayers/js/ol.css' %}" type="text/css">
 <style>
     .map {
         height: 400px;
         width: 100%;
     }
 </style>
-<script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script>
+<script src="{% static 'openlayers/js/ol.js'%}"></script>
 {% endblock %}
 
 {% block pagetitle %}
