--- a/payments/templates/payments/tier.html
+++ b/payments/templates/payments/tier.html
@@ -63,4 +63,11 @@
         </div>
     </div>
 </div>
+<div class="uk-alert-warning" uk-alert>
+    <a class="uk-alert-close" uk-close></a>
+    <p>
+        Please double check the tier you selected before continuing. <br />
+        Changing tiers is possible later, but you will have write an email to <a href="mailto:support@jacobs-alumni.de">support@jacobs-alumni.de</a> to do so <b>manually</b>. 
+    </p>
+</div>
 {% endblock %}
