Clairfy that Starter Tier is open to all
This commit clarifies that the Starter Tier is open to all Alumni,
regardless of graduation year. This is in accordance with the decision
of the Alumni Board and the General Assembly 2019. It updates and makes
consistent the description of the various tiers and removes the
'starterReason' field.

--- a/MemberManagement/templates/static/index.html
+++ b/MemberManagement/templates/static/index.html
@@ -65,7 +65,7 @@
                 Contributor – Standard membership for 39€ p.a.
             </li>
             <li>
-                Starter – Membership for fresh graduates (or those not ready to financially contribute) for free
+                Starter – Free Membership (for those not ready or willing to financially contribute) for 0€ p.a.
             </li>
             <li>
                 Patron – Premium membership (incl. additional benefits) for 249€ p.a.
