--- a/payments/templates/payments/tier.html
+++ b/payments/templates/payments/tier.html
@@ -19,14 +19,10 @@
                 <b>Starter</b> - The free membership for recent graduates or those who are not ready to contribute financially to the Association at this point. 
             </p>
             <p>
-                We want all Alumni to be able to connect via the Association and won't exclude anyone based on their financial situation. 
-                In accordance with the Association’s current by-laws (§1.4), we will ask you to upgrade your membership to Contributor after two years. 
-                However, the decision to upgrade is completely yours. 
-                Upon request you can extend the Starter category for one more year. 
+                We want all Alumni to be able to connect via the Association and won't exclude anyone based on their financial situation or willingness to contribute. 
+                In accordance with the Association's current by-laws (§1.4) after 2 years of Starter membership, you will need to decide if you want to upgrade to a different category. 
+                However, the decision to upgrade is completely yours - you can instead decide to extend the 'Starter' period for one additional year.
                 This can be repeated for an unlimited number of times. 
-            </p>
-            <p>
-                Please provide a short explanation on why you chose the starter plan: 
             </p>
         </div>
         <div id="description-co">
