Update Ter Descriptions
This commit updates the tier descriptions.

--- a/MemberManagement/templates/static/index.html
+++ b/MemberManagement/templates/static/index.html
@@ -65,10 +65,10 @@
                 Contributor – Standard membership for 39€ p.a.
             </li>
             <li>
-                Starter – Free Membership (for those not ready or willing to financially contribute) for 0€ p.a.
+                Starter – Free Membership for 0€ p.a.
             </li>
             <li>
-                Patron – Premium membership (incl. additional benefits) for 249€ p.a.
+                Patron – Premium membership for 249€ p.a.
             </li>
         </ul>
     </p>
