--- a/payments/templates/payments/tier.html
+++ b/payments/templates/payments/tier.html
@@ -16,13 +16,12 @@
     <div class="uk-form-controls uk-form-controls-text">
         <div id="description-st">
             <p>
-                <b>Starter</b> - The free membership for recent graduates or those who are not ready to contribute financially to the Association at this point. 
+                <b>Starter</b> - The free membership for those not ready or willing to financially contribute to the Association at this point. 
             </p>
             <p>
-                We want all Alumni to be able to connect via the Association and won't exclude anyone based on their financial situation or willingness to contribute. 
-                In accordance with the Association's current by-laws (§1.4) after 2 years of Starter membership, you will need to decide if you want to upgrade to a different category. 
-                However, the decision to upgrade is completely yours - you can instead decide to extend the 'Starter' period for one additional year.
-                This can be repeated for an unlimited number of times. 
+                We want all Alumni to be able to connect via the Association and won't exclude anyone based on their financial situation or willingness to contribute.
+                After the first 2 years (and then once a year after that), we'll check with you if you want to stay in the Starter tier or if you feel comfortable upgrading to one of our paid tiers.
+                If you don't, no problem, you can decide to stay in the Starter tier with no disadvantages.
             </p>
         </div>
         <div id="description-co">
