Fix atlas regression
A previous regression introduced a bug that caused the Atlas Page to
malfunction when running from inside Docker. This commit fixes the
issue.

--- a/atlas/templates/atlas/index.html
+++ b/atlas/templates/atlas/index.html
@@ -7,8 +7,8 @@
 {% block pagetitle %}Jacobs Alumni Atlas{% endblock %}
 
 {% block head %}
-<link rel="stylesheet" href="{% static 'openlayers/js/ol.css' %}" type="text/css">
-<script src="{% static 'openlayers/js/ol.js' %} "></script>
+<link rel="stylesheet" href="{% static "openlayers/css/ol.css" %}" type="text/css">
+<script src="{% static "openlayers/js/ol.js" %} "></script>
 <style>
 .map {
     height: 400px;
