--- a/atlas/templates/atlas/profile.html
+++ b/atlas/templates/atlas/profile.html
@@ -7,14 +7,14 @@
 
 
 {% block head %}
-<link rel="stylesheet" href="{% static 'openlayers/js/ol.css' %}" type="text/css">
+<link rel="stylesheet" href="{% static "openlayers/css/ol.css" %}" type="text/css">
 <style>
     .map {
         height: 400px;
         width: 100%;
     }
 </style>
-<script src="{% static 'openlayers/js/ol.js'%}"></script>
+<script src="{% static "openlayers/js/ol.js"%}"></script>
 {% endblock %}
 
 {% block pagetitle %}
