--- a/custom_auth/templates/auth/login.html
+++ b/custom_auth/templates/auth/login.html
@@ -25,7 +25,7 @@ var login_script_settings = {
     token_endpoint: "{% url 'token_login' %}"
 }
 </script>
-<script type="text/javascript"  src="{% static 'js/login.js' %}"></script>
+<script type="text/javascript"  src="{% static "js/login.js" %}"></script>
 {% endblock %}
 
 {% block pagetitle %}
@@ -36,7 +36,7 @@ Login
 <div>
     <div {% if googlefail %} class="uk-alert uk-alert-danger" uk-alert {% endif%}>
         <button disabled id="g-signin" type="button" class="uk-button uk-button-primary">
-            <img id="g-signin-icon" src="{% static 'media/btn_google_light_pressed_ios.svg' %}" /><span id="g-signin-text">Sign
+            <img id="g-signin-icon" src="{% static "media/btn_google_light_pressed_ios.svg" %}" /><span id="g-signin-text">Sign
                 in with Google</span>
         </button>
         {% if googlefail %}
