--- a/MemberManagement/templates/base/base.html
+++ b/MemberManagement/templates/base/base.html
@@ -13,6 +13,7 @@
         <meta name="description" content="The Jacobs Alumni Association is the growing network of former Jacobs University students and friends." />
         <meta name="keywords" content="Jacobs Alumni Association, Jacobs University Bremen, Jacobs University, Alumni Association, Jacobs, Alumni, Association, Bremen" />
 
+        <link rel="icon" type="image/png" href="{%  static "media/favicon.png" %}" />
         <link href="{% static "uikit/css/style.min.css" %}" rel="stylesheet" />
 
         {% if google_analytics_id %}
