--- a/registry/templates/portal/edit.html
+++ b/registry/templates/portal/edit.html
@@ -27,7 +27,7 @@
     <form class="uk-form-horizontal" method="POST">
         {% csrf_token %}
         {{ form | as_uikit_form }}
-        <input type="submit" class="uk-button uk-button-primary" value="Update">
+        <input id="input_id_submit" type="submit" class="uk-button uk-button-primary" value="Update">
     </form>
 </div>
 {% endblock %}
