--- a/MemberManagement/templates/base/footer_legal.html
+++ b/MemberManagement/templates/base/footer_legal.html
@@ -4,5 +4,5 @@
 </p>
 <p>
     Copyright © 2017-{% now "y" %} Jacobs University Alumni Association. All Rights Reserved. <br>
-    <a href="/privacy/">Datenschutzerklärung / Privacy Policy</a> <a href="/imprint/">Impressum / Imprint</a>
+    <a href="{% url "privacy" %}">Datenschutzerklärung / Privacy Policy</a> <a href="{% url "imprint" %}">Impressum / Imprint</a>
 </p>
