--- a/payments/templates/payments/subscribe.html
+++ b/payments/templates/payments/subscribe.html
@@ -1,6 +1,7 @@
 {% extends "base/base.html" %}
 {% load uikit_tags %}
 {% load static %}
+{% load registry_display %}
 
 {% block title %}Membership Data{% endblock %}
 
@@ -55,6 +56,40 @@
     {% endif %}
 
     <div>
+        <form class="uk-form-horizontal">
+            <div id="div_id_tier">
+                <label class="uk-form-label" for="id_tier">
+                    Membership Tier *
+                </label>
+                <div class="uk-form-controls-text uk-hidden@m">
+                    <p></p>
+                </div>
+                <div class="uk-form-controls uk-form-controls-text">
+                    <select name="payment_type" class="uk-select " id="id_tier" disabled="disabled">
+                        <option>{{ alumni.membership | get_choice_field:"tier" }}</option>
+                      </select>
+                </div>
+
+                <div class="uk-form-controls uk-form-controls-text uk-visible@m">
+                    <p></p>
+                </div>
+
+                <div class="uk-form-controls uk-form-controls-text uk-alert-warning" uk-alert>
+                    {% if updating %}
+                        You can not change tiers on this page. 
+                    {% else %}
+                        It is not possible to change tiers on your own at this point of the signup process. 
+                        If you absolutely need to change your tier, please contact support by writing an email to <a href="mailto:support@jacobs-alumni.de">support@jacobs-alumni.de</a>. 
+                    {% endif %}
+                    
+                    {% if selfservice_tier_enabled %}
+                        {% if updating %}{% else %}
+                            You will be able to change tiers once you have completed your registration. 
+                        {% endif %}
+                    {% endif %}
+                </div>
+            </div>
+        </form>
         <form method="post" id="payment-form" class="uk-form-horizontal">
             {% csrf_token %}
 
@@ -116,7 +151,11 @@
                             The system will notify you before any further payments are due.
                         </li>
                         <li>
-                            You can always change your membership in the membership portal.
+                            {% if selfservice_tier_enabled %}
+                                Once your application is completed, you can change your membership tier in the membership portal.
+                            {% else %}
+                                You can always change your tier by contacting support. 
+                            {% endif %}
                         </li>
                     </ul>
                 </div>
