--- a/payments/templates/payments/tier.html
+++ b/payments/templates/payments/tier.html
@@ -62,7 +62,12 @@
     <a class="uk-alert-close" uk-close></a>
     <p>
         Please double check the tier you selected before continuing. <br />
-        Changing tiers is possible later, but you will have write an email to <a href="mailto:support@jacobs-alumni.de">support@jacobs-alumni.de</a> to do so <b>manually</b>. 
+        {% if selfservice_tier_enabled %}
+            You will be able to change tiers on your own only after the setup process is completed. 
+            If you change your mind later during the signup process, you can contact support by writing an email to <a href="mailto:support@jacobs-alumni.de">support@jacobs-alumni.de</a>. 
+        {% else %}
+            Changing tiers is possible later, but you will have to write an email to <a href="mailto:support@jacobs-alumni.de">support@jacobs-alumni.de</a> for them do so <b>manually</b>. 
+        {% endif %}
     </p>
 </div>
 {% endblock %}
