Implement self-service up-and-downgrade
This commit implements self-serviced updates and downgrades. Furthermore
it slightly tweaks the UI and Tests for all payment integrations.

--- a/MemberManagement/templates/base/base.html
+++ b/MemberManagement/templates/base/base.html
@@ -40,6 +40,7 @@
                 {% cookielaw_banner %}
                 
                 {% include "base/devel.html" %}
+                {% include "base/messages.html" %}
                 
                 <article class="uk-article">
                     <h1 class="uk-article-title">{% block pagetitle %}{% endblock %}</h1>
