--- a/registry/templates/portal/parts/payment.html
+++ b/registry/templates/portal/parts/payment.html
@@ -15,6 +15,6 @@
         </table>
     </div>
     <div class="uk-card-footer">
-        <a href="{% url 'view_payments' %}" class="uk-button uk-button-text">View Payment Information</a>
+        <a href="{% url 'view_payments' %}" class="uk-button uk-button-text">Edit Membership</a>
     </div>
 </div>
