--- a/payments/templates/payments/view.html
+++ b/payments/templates/payments/view.html
@@ -1,111 +1,47 @@
 {% extends "base/base.html" %}
 {% load uikit_tags %}
 
-{% block title %}Payment Information{% endblock %}
-
-{% block pagetitle %}
-<a href="{% url "portal" %}" class="uk-button uk-button-default uk-button-small">
-    <span uk-icon="icon: arrow-left"></span>
-    Back to Portal
-</a>
-Payment Information
-{% endblock %}
+{% block title %}Membership{% endblock %}
 
 {% block content %}
 {% if admin %}{% else %}
     {% include "portal/approval_warning.html" %}
 {% endif %}
 
-<div class="uk-text-lead">
-    <p>
-        All information visible on this page is securely stored with our payment provider, <a href="https://stripe.com/">Stripe</a>. 
-        Stripe is <b>fully compliant with industry security standards</b> (certified PCI Level 1 Service Provider) and used by companies and nonprofits alike (e.g. Unicef, Booking.com, Indiegogo).
-        Apart from the dates of your membership, we do not have a copy of your payment data (e.g. credit card number, card expiry date, CVV or bank account details) on our server. 
-    </p>
-    
-    <p>
-        If you have any questions, need help or require a receipt, please contact <a href="mailto:support@jacobs-alumni.de">support@jacobs-alumni.de</a>.
-    </p>
-</div>
-
-
 {% if error %}
-    <div class="uk-alert uk-alert-danger" uk-alert>
-        <h3>An error occurred</h3>
-        <p>
-            {{ error }}
-        </p>
-        <p>
-            Please contact support if this problem persists. 
-        </p>
+    {% include "payments/view/error.html" %}
+{% else %}
+    <div class="uk-grid">
+        <div class="uk-width-1-2@m uk-hidden@m">
+            {% include "payments/view/002_info_support.html" %}
+            <div><br /></div>
+        </div>
+        <div class="uk-width-1-2@m">
+            {% include "payments/view/001_tier.html" %}
+            <div><br /></div>
+        </div>
+        <div class="uk-width-1-2@m uk-visible@m">
+            {% include "payments/view/002_info_support.html" %}
+            <div><br /></div>
+        </div>
+
+        <div class="uk-width-1-2@m uk-hidden@m">
+            {% include "payments/view/003_info_stripe.html" %}
+            <div><br /></div>
+        </div>
+        <div class="uk-width-1-2@m">
+                {% include "payments/view/004_methods.html" %}
+            <div><br/></div>
+        </div>
+        <div class="uk-width-1-2@m uk-visible@m">
+            {% include "payments/view/003_info_stripe.html" %}
+            <div><br /></div>
+        </div>
+
+        <div class="uk-width-1-1">
+            {% include "payments/view/005_invoices.html" %}
+            <div><br/></div>
+        </div>
     </div>
-{% else %}
-
-<h2>Payment Methods</h2>
-
-{% if methods %}
-    <p>
-        The following payment method(s) are on file for you:
-    </p>
-        
-    <ul id="payment_methods">
-        {% for method in methods %}
-            <li id="id_payment_method_{{ forloop.counter }}">{{ method | safe }}</li>
-        {% endfor %}
-    </ul>
-
-    <p>
-        {% if user.alumni.can_update_payment %}
-            <a href="{% url 'update_subscription' %}" class="uk-button uk-button-default" id='id_update_payment'>Update Payment Method</a>
-        {% endif %}
-    </p>
-{% else %}
-    
-    <p>
-        No payment methods on file. 
-    </p>
-
-{% endif %}
-    
-<h2>Invoices</h2>
-
-<table class="uk-table uk-table-divider">
-    <thead>
-        <tr>
-            <th>Date</th>
-            <th>Description</th>
-            <th>Total</th>
-            <th>Status</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for invoice in invoices %}
-            <tr id="id_invoice_{{forloop.counter}}">
-                <td>
-                    {{ invoice.date | safe }}
-                </td>
-                <td>
-                    {% for l in invoice.lines %}
-                        {% if l %}
-                            {{ l | safe }} <br />
-                        {% endif %}
-                    {% endfor %}
-                </td>
-                <td>
-                    {{ invoice.total | safe }}
-                </td>
-                <td>
-                    {% if invoice.paid %}
-                        <span class="uk-label uk-label-success">Paid</span>
-                    {% elif invoice.closed %}
-                        <span class="uk-label uk-label-danger">Unpaid</span>
-                    {% else %}
-                        <span class="uk-label uk-label-warning">Pending</span>
-                    {% endif %}
-                </td>
-            </tr>
-        {% endfor %}
-    </tbody>
-</table>
 {% endif %}
 {% endblock %}
