Update text for switching between tiers

--- a/payments/templates/payments/tier.html
+++ b/payments/templates/payments/tier.html
@@ -101,9 +101,8 @@
                 Once you start the upgrade, you will not be able to use the portal until this is complete. 
             </li>
             <li>
-                When switching between payed tiers, your existing payment method will be reused. <br />
-                Your payment cycle remains the same, and the up- or downgrade will be <b>pro-rated</b>. <br />
-                This means that if you e.g. change tiers 6 months after first becoming a member, you will pay 50% of the old price plus 50% of the new price.
+                When switching between payed tiers, your existing payment method will be reused and the payment cycle remains the same. <br />
+                Depending on when during the yearly payment cycle you change your membership, the membership fee will be calculated as a combination of the old and new price.
             </li>
             <li>
                 If you decide to downgrade to the starter tier, your subscription will be cancelled immediatly and your payment methods will be deleted. <br />
