--- a/payments/templates/payments/tier.html
+++ b/payments/templates/payments/tier.html
@@ -97,15 +97,15 @@
 
         {% if updating %}
             <li>
-                When upgrading from the starter to a payed tier, you will be asked to enter payment information. <br />
+                When upgrading from the starter to a paid tier, you will be asked to enter payment information. <br />
                 Once you start the upgrade, you will not be able to use the portal until this is complete. 
             </li>
             <li>
-                When switching between payed tiers, your existing payment method will be reused and the payment cycle remains the same. <br />
+                When switching between paid tiers, your existing payment method will be reused and the payment cycle remains the same. <br />
                 Depending on when during the yearly payment cycle you change your membership, the membership fee will be calculated as a combination of the old and new price.
             </li>
             <li>
-                If you decide to downgrade to the starter tier, your subscription will be cancelled immediatly and your payment methods will be deleted. <br />
+                If you decide to downgrade to the starter tier, your subscription will be cancelled immediately and your payment methods will be deleted. <br />
             </li>
         {% else %}
             {% if selfservice_tier_enabled %}
