--- a/payments/templates/payments/view/001_tier.html
+++ b/payments/templates/payments/view/001_tier.html
@@ -9,7 +9,7 @@
     <div class="uk-card-body">
         Your current tier: <b>{{ user.alumni.membership | get_choice_field:"tier" }}</b>
     </div>
-    {% if user.alumni.can_update_tier %}
+    {% if user.alumni.setup_completed %}
         <div class="uk-card-footer">
             <a href="{% url 'update_membership' %}" class="uk-button uk-button-text" id='id_update_tier'>Change Tier</a>
         </div>
