Show membership history on payments page
This commit adds information about membership history on the membership
page.

--- a/payments/templates/payments/view.html
+++ b/payments/templates/payments/view.html
@@ -25,21 +25,26 @@
             <div><br /></div>
         </div>
 
+        <div class="uk-width-1-1">
+            {% include "payments/view/003_past.html" %}
+            <div><br/></div>
+        </div>
+
         <div class="uk-width-1-2@m uk-hidden@m">
-            {% include "payments/view/003_info_stripe.html" %}
+            {% include "payments/view/004_info_stripe.html" %}
             <div><br /></div>
         </div>
         <div class="uk-width-1-2@m">
-                {% include "payments/view/004_methods.html" %}
+                {% include "payments/view/005_methods.html" %}
             <div><br/></div>
         </div>
         <div class="uk-width-1-2@m uk-visible@m">
-            {% include "payments/view/003_info_stripe.html" %}
+            {% include "payments/view/004_info_stripe.html" %}
             <div><br /></div>
         </div>
 
         <div class="uk-width-1-1">
-            {% include "payments/view/005_invoices.html" %}
+            {% include "payments/view/006_invoices.html" %}
             <div><br/></div>
         </div>
     </div>
