Rename {% block scripts %} to {% block extrascripts %}

--- a/MemberManagement/templates/base/base.html
+++ b/MemberManagement/templates/base/base.html
@@ -57,8 +57,8 @@
         {% endblock %}
 
         {% block scripts %}
-            {% render_bundle "base" "js" %}            
-            <script src="{% static "cookielaw/js/cookielaw.js" %}"></script>
+            {% render_bundle "base" "js" %}
+            {% block extrascripts %}{% endblock %}
         {% endblock %}
     </body>
 </html>
