--- a/custom_auth/templates/auth/login.html
+++ b/custom_auth/templates/auth/login.html
@@ -35,8 +35,7 @@ Login
 </div>
 
 {% endblock %}
-{% block scripts %}
-{{ block.super }}
+{% block extrascripts %}
 
 <script>
     window.google_login_settings = {
