--- a/payments/templates/payments/subscribe.html
+++ b/payments/templates/payments/subscribe.html
@@ -185,8 +185,8 @@
         </form>
     </div>
 {% endblock %}
-{% block scripts %}
-    {{ block.super }}
+
+{% block extrascripts %}
     <script src="https://js.stripe.com/v3/"></script>
     <script>
         window.stripe_publishable_key = {% if stripe_publishable_key %}"{{ stripe_publishable_key | escapejs }}"{% else %}undefined{% endif %};
